--- a/Agu/core/template/css/style4agu.css
+++ b/Agu/core/template/css/style4agu.css
@@ -1,4 +1,5 @@
 *{	
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	margin:0;
 	padding:0;
 }
@@ -34,7 +35,12 @@ header{
 	height:120px;
 
 }
-
+#mainHead{
+	position: absolute;
+	left: 245px;
+    top: -70px;
+	margin: 100px;
+}
 nav{
 	background: rgba(241,241,103,0.8);
 	height:40px;
@@ -95,7 +101,7 @@ div#left a:hover{
 }
 
 #footer{
-	background:rgba(245,130,130,0.7);
+	background:rgba(245,130,130,0.5);
 	height: 100px;
 	clear:both;
 }
