--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,3 +7,8 @@ a{
     color: #f55a5a;
     font-size: 20px;
 }
+
+#error{
+    color:#e026269e;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
