--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,20 +1,72 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-body#mainHtml{
+body#errorPage{
+    background-image: url(../img/404.png);
+    background-color: black;
+    background-position: top;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+}
+
+.background {
     background-image: url(../img/someimg.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+  }
 
+.blur {
+    background: rgba(255, 255, 255, 0.2); 
+    backdrop-filter: blur(8px);
+    height: 100vh;
+    width: 100%;
 }
 
-a{
+#main>div>h1{
+    font-size: 200px;
+    color: #0000006b;
+    text-align: center;
+}
+
+#main>div>h2{
+    font-size: 200px;
+    color: #0dcf1d6b;
+    text-align: center;
+}
+
+#secondPage>div>h1{
+    font-size: 200px;
+    color: #0000006b;
+    text-align: center;
+}
+
+#secondPage>div>h2{
+    font-size: 200px;
+    color: #1ab5f16b;
+    text-align: center;
+}
+
+.link {
+    position: absolute;
+    right: 50px;
+    top: 20px;
     text-decoration: none;
     color: #f55a5a;
     font-size: 20px;
 }
 
-#error{
-    color:#e026269e;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.link:hover {
+    color: #11e22283;
+    text-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 
+#link2:hover{
+    color:#2cbbf3d8;
+}
