--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,7 +5,7 @@
 }
 
 
-body#errorPage{
+#errorPage {
     background-image: url(../img/404.png);
     background-color: black;
     background-position: top;
@@ -30,27 +30,27 @@ body#errorPage{
     width: 100%;
 }
 
-#main>div>h1{
-    font-size: 200px;
+#main>div>h1 {
+    font-size: 300px;
     color: #0000006b;
     text-align: center;
 }
 
-#main>div>h2{
-    font-size: 200px;
+#main>div>h2 {
+    font-size: 300px;
     color: #0dcf1d6b;
     text-align: center;
 }
 
-#secondPage>div>h1{
-    font-size: 200px;
+#secondPage>div>h1 {
+    font-size: 300px;
     color: #0000006b;
     text-align: center;
 }
 
 
-#secondPage>div>h2{
-    font-size: 200px;
+#secondPage>div>h2 {
+    font-size: 300px;
     color: #1ab5f16b;
     text-align: center;
 }
@@ -74,21 +74,25 @@ body#errorPage{
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
-#link2:hover{
+#link2:hover {
     color:#2cbbf3d8;
 }
 
 
-@media ( max-width:1100px ) {
+@media ( max-width:1200px ) {
+
     #main>div>h1{
         font-size: 100px;
     }
+
     #main>div>h2{
         font-size: 100px;
     }
+
     #secondPage>div>h1{
         font-size: 100px;
     }
+
     #secondPage>div>h2{
         font-size: 100px;
     }
@@ -96,7 +100,7 @@ body#errorPage{
     a.link  {
         display: inline-block;
        position: relative;
-       margin: 0 50%;
+       margin: 0 calc(50% - 30px);
        white-space: nowrap;
     }
 
